--- a/rpn_proxy/Dockerfile
+++ b/rpn_proxy/Dockerfile
@@ -3,5 +3,6 @@ RUN apk add ruby
 MAINTAINER Piotr Kaliński "pi.kalinski@gmail.com"
 COPY . /app
 WORKDIR /app
+EXPOSE 5000
 RUN pip install -r requirements.txt
 CMD python ./app.py
