--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: "3.1"
 services:
-  # golang:
-  #   build: ./golang
-  #   command: "go run main.go"
-  #   ports:
-  #     - "8080:8000"
+  golang:
+    build: ./golang
+    command: "go run main.go"
+    ports:
+      - "4000:8000"
 
 
   flask:
